# Surreal

./: LICENSE  README.md  Surreal.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
src/: Game.hs
