cabal-version:      2.4
name:               Surreal
version:            0.1.0.0
description:    Please see the README on GitHub at <https://github.com/zornslemonade/Surreal#readme>
homepage:       https://github.com/zornslemonade/Surreal#readme
bug-reports:    https://github.com/zornslemonade/Surreal/issues
author:         Grant Goodman
maintainer:     zornslemonade@gmail.com
copyright:      2023 Grant Goodman
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
  default-language: Haskell2010
